# DuraXell

./: .gitattributes  .gitignore  AUDIT_24FEV.md  BILAN_SEMAINE1.md  BILAN_SEMAINE2.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Consumtion_of_Duraxell.csv  DEPENDENCY_REPORT.md  DuraXELL_DependencyTree.jsx  LICENSE  Makefile  RAPPORT_COMPREHENSION.md  README.md  THRESHOLDS_JUSTIFICATION.md  _batch_out.txt  _cfg_dump.txt  _test_rules.txt  _yield_out.txt  breast_cancer_biomarker_eval_summary.csv  clean_utf8.py  create_notebook.py  cuda_check.txt  dashboard_tmp_log.txt  debug_freq.py  decision_config.json  fix_bridge.py  fix_demo.py  fix_encoding.py  fix_orch.py  fix_scorer.py  fix_trackers.py  fix_trackers2.py  fix_tree.py  main.py  modifications.ps1  nvidia_smi.txt  out_demo_rest.txt  out_errs.json  (+19 more)
ESMO2025/: E_annotation_yield.py  E_composite_scorer.py  E_creation_arbre_decision.py  E_feasibility_NER.py  E_fesability_NER.py  E_frequency.py  E_homogeneity.py  E_risk_context.py  E_templatability.py  E_templeability.py  __init__.py  cascade_orchestrator.py  energy_tracker.py  generate_homogeneity_report.py  generate_risk_context_report.py  generate_templatability_report.py  generate_templeability_report.py  sensitivity_analysis.py  train_crf.py  visualize_decision_tree.py
NER/: sweep_results_new.csv
Reports/: DuraXELL_Pipeline.ipynb
Results/: batch_extraction_results.csv  benchmark_energy.csv  benchmark_explainability.csv  benchmark_pareto.csv  benchmark_performance.csv  energy_summary.json  explainability_summary.json  risk_context_analysis.csv
config/: jupyter_server_config.json  reproducibility.yaml
dashboard/: app.py  (+2 more)
(+1238 files in other folders)
