[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duraxell"
version = "0.3.0"
description = "Cascade NLP pipeline for oncological biomarker extraction — optimizing the Performance-Explainability-Frugality trilemma"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clément Longeac", email = "clement.longeac@edu.esiee.fr"},
]
keywords = ["NLP", "NER", "oncology", "biomarkers", "frugal-AI", "cascade"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7",
    "plotly>=5.18,<6.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "eco2ai>=0.3",
    "seaborn>=0.13",
    "Unidecode>=1.3",
]

[project.optional-dependencies]
ner = [
    "torch>=2.0",
    "transformers>=4.36",
    "datasets>=2.16",
    "seqeval>=1.2",
]
dashboard = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/duraxell/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B"]